--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/api/index.php" }
+    { "src": "/(.*)",  "dest": "/api/index1.php" }
   ]
 }
